
* SOLR-17347: EnvUtils: Removed "env" methods, as they were problematic.  Code should almost never
  refer to env vars.  (David Smiley)

* SOLR-15831: Refactor bin/solr and bin/solr.cmd commands integration with AuthTool, DeleteTool, and PackageTool to delegate arg parsing to Java code.  Removed limitation of PackageTool only being executed on an active Solr node.  (Eric Pugh)

==================  9.6.1 ==================
Bug Fixes
---------------------
* SOLR-17261: Remove unintended timeout of 60 seconds for core loading. (Houston Putman)

* SOLR-17049: Actually mark all replicas down at startup and truly wait for them.
  This includes replicas that might not exist anymore locally. (Houston Putman, Vincent Primault)

* SOLR-17263: Fix 'Illegal character in query' exception in HttpJdkSolrClient (Andy Webb)

* SOLR-17275: SolrJ ZkClientClusterStateProvider, revert SOLR-17153 for perf regression when aliases are used. (Aparna Suresh)

* SOLR-17296: Remove (broken) singlePass attempt when reRankScale + debug is used, and fix underlying NPE. (hossman)

* SOLR-17307: Use the system file separator instead of an explicit '/' in CachingDirectoryFactory (Houston Putman, hossman)

Dependency Upgrades
---------------------
* PR#2308: Update dependency org.apache.commons:commons-compress to v1.26.1 (solrbot)

==================  9.6.0 ==================
New Features
---------------------
* SOLR-17141: Implement 'cpuAllowed' query parameter to limit the maximum CPU usage by a running query. (Andrzej Bialecki, Gus Heck, David Smiley)

* SOLR-599: Add a new SolrJ client using the JDK’s built-in Http Client.  (James Dyer)

* SOLR-16403: A new cluster singleton plugin to automatically remove inactive shards. (Paul McArthur, David Smiley)

* SOLR-16466: Admin UI - Make it optional to sort list of commandline args (Shawn Heisey, Vincenzo D'Amore via Christine Poerschke)

Improvements
---------------------